[MOD] En formumlario de usuario, en caso de error en la validaciòn del usuario, el texto aclaratorio se remarca en rojo

--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -116,7 +116,7 @@
                             item-left></ion-icon>
                         </ion-input>
                     </ion-item>
-                    <ion-note *ngIf="usernameFocus">
+                    <ion-note *ngIf="usernameFocus" [ngStyle]="{ color: form.get('username').dirty && form.get('username').errors !== null ? 'red': '#000' }">
                         Máximo 20 caracteres alfanuméricos sin símbolos ni espacios
                     </ion-note>
 
