--- a/src/app/concursos/concurso-post/concurso-post.page.html
+++ b/src/app/concursos/concurso-post/concurso-post.page.html
@@ -43,7 +43,7 @@
                   
                   <!-- TODO: revisar scroll en PC, ver css global -->
                   <!-- TODO: modificar el max de fecha como la fecha actual + 10 años -->
-                  <ion-datetime
+                  <!--<ion-date
                       displayFormat="DD/MMM/YYYY"
                       monthValues="01,02,03,04,05,06,07,08,09,10,11,12"
                       monthShortNames="ene, feb, mar, abr, may, jun, jul, ago, sep, oct, nov, dic"
@@ -54,7 +54,10 @@
                       required
                       doneText="Elegir"
                       cancelText="Cancelar">
-                  </ion-datetime>
+                  </ion-date>-->
+                  <input class="date-select" type="datetime-local" 
+                  min="2022-05-06Z00:00:00"
+                  [ngModel]="concurso.start_date" id="start_date" name="start_date">
                 </ion-item>
               </ion-col>
 
@@ -62,7 +65,7 @@
                 <ion-item class="ion-no-padding">
                   <ion-label position="stacked">Finalización</ion-label>
                   <!-- TODO: modificar el max de fecha como la fecha actual + 10 años -->
-                  <ion-datetime
+                  <!--<ion-date
                       displayFormat="DD/MMM/YYYY"
                       monthValues="01,02,03,04,05,06,07,08,09,10,11,12"
                       monthShortNames="ene, feb, mar, abr, may, jun, jul, ago, sep, oct, nov, dic"
@@ -73,7 +76,9 @@
                       required
                       doneText="Elegir"
                       cancelText="Cancelar">
-                  </ion-datetime>
+                  </ion-date>-->
+                  <input class="date-select" type="datetime-local" min="2022-05-06Z00:00:00"
+                  [ngModel]="concurso.end_date" id="end_date" name="end_date">
                 </ion-item>
               </ion-col>
             </ion-item>
