--- a/src/global.scss
+++ b/src/global.scss
@@ -29,6 +29,11 @@
   cursor: pointer;
 }
 
+.date-select{
+  background:#FFF;
+  border: 1px solid #aaa;
+}
+
 .pagination-element{
   border:              1px solid #888;
   padding:             0.5rem;
