--- a/src/app/nav/navbar/navbar.component.html
+++ b/src/app/nav/navbar/navbar.component.html
@@ -17,6 +17,7 @@
     <!-- up para PC -->
     <!-- <ion-button [routerLink]="['/']"> Home </ion-button> -->
     <!-- <ion-button> Reglamento </ion-button> -->
+    <ion-button [routerLink]="['/concursos/ranking']"> Ranking </ion-button>
     <ion-button [routerLink]="['/concursos']"> Concursos </ion-button>
     <!-- <ion-button> Galería </ion-button> -->
     <ion-button *ngIf="rolificador.esDelegado(u) || rolificador.isAdmin(u)"
