--- a/src/app/concursos/ranking/ranking.page.html
+++ b/src/app/concursos/ranking/ranking.page.html
@@ -4,7 +4,7 @@
     <ion-row>
       <ion-col size-md="10" push-md="1" >
         <h1 class="ion-margin-top ion-margin-bottom ion-margin-end">
-          Ranking
+          Ranking - {{anio}}
         </h1>
       </ion-col>
     </ion-row>
@@ -18,51 +18,61 @@
           </h1>
         </ion-row>
 
-<!-- ENCABEZADO TABLA -->
-        <ion-row>
+        <ion-row *ngFor="let r of ranking.profiles">
           <ion-col>
+            <ion-row>
+              <ion-col><h2>{{r.nombre_categoria}}</h2></ion-col>
+            </ion-row>
 
-              <ion-list>
-                <ion-item color="dark">
+            <!-- ENCABEZADO TABLA -->
+            <ion-row>
+              <ion-col>
 
-                  <ion-grid>
-                    <ion-row class="ion-padding-end">
+                  <ion-list>
+                    <ion-item color="dark">
 
-                      <ion-col size="2">Posición</ion-col>
-                      <ion-col size="5">Participante</ion-col>
-                      <ion-col size="5">Puntaje</ion-col>
+                      <ion-grid>
+                        <ion-row class="ion-padding-end">
 
-                    </ion-row>
-                  </ion-grid>
+                          <ion-col size="2">Posición</ion-col>
+                          <ion-col size="5">Participante</ion-col>
+                          <ion-col size="5">Puntaje</ion-col>
 
-                </ion-item>
-              </ion-list>
+                        </ion-row>
+                      </ion-grid>
+
+                    </ion-item>
+                  </ion-list>
+
+              </ion-col>
+            </ion-row>
+
+      <!-- FILAS TABLA-->
+            <ion-row *ngFor="let rg of r.profiles; let i1 = index">
+              <ion-col>
+
+                  <ion-list>
+                    <ion-item >
+
+                      <ion-grid>
+                        <ion-row class="ion-padding-end">
+
+                          <ion-col size="2"># {{rg.posicion_temporada}}</ion-col>
+                          <ion-col size="5" class="cap">{{rg.name}}</ion-col>
+                          <ion-col size="5">{{rg.puntaje_temporada}}</ion-col>
+
+                        </ion-row>
+                      </ion-grid>
+
+                    </ion-item>
+                  </ion-list>
+
+              </ion-col>
+            </ion-row>
 
           </ion-col>
         </ion-row>
 
-<!-- FILAS TABLA-->
-        <ion-row *ngFor="let r of ranking.profiles; let i = index">
-          <ion-col>
-
-              <ion-list>
-                <ion-item >
-
-                  <ion-grid>
-                    <ion-row class="ion-padding-end">
-
-                      <ion-col size="2"># {{i+1}}</ion-col>
-                      <ion-col size="5" class="cap">{{r.name}}</ion-col>
-                      <ion-col size="5">{{r.score}}</ion-col>
-
-                    </ion-row>
-                  </ion-grid>
-
-                </ion-item>
-              </ion-list>
-
-          </ion-col>
-        </ion-row>
 
         <ion-row>
           <h1 class="ion-margin-top ion-margin-bottom ion-margin-end">
